# C-

./: 0.1.8.cpp  0.2.11.cpp  1.1.16a.cpp  1.19z.cpp  1.2.1.11g.cpp  1.2.1.12b.cpp  1.2.1.17k.cpp  1.2.1.18b.cpp  1.2.19z.cpp  1.2.2.cpp  1.2.23.cpp  1.2.9a.cpp  1.3.1.cpp  1.3.12.cpp  1.3a.cpp  1.7bv.cpp  1.8a.cpp  10.cpp  11.cpp  12.cpp  13.cpp  2.0.12.cpp  2.0.4.cpp  2.0.5.cpp  2.0.7.cpp  2.0.9e.cpp  2.1.2.cpp  2.1.23.cpp  2.1.6.cpp  24.cpp  3.1.1g.cpp  3.1.23.cpp  3.1.29.cpp  3.1.3.cpp  3.3.2.cpp  4.0.14av.cpp  4.0.6z.cpp  4.1.2b.cpp  4_classwork.cpp  5.27.cpp  (+38 more)
Desktop/Algorithms/: arr_indexes_count_recursion.py  biggest_item_recursion.py  binary_search.py  different_breed.py  quick_sort.py  selection_sort.py  sum_recursion.py
Desktop/ac-back/: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose-test.yml  exp_req.xlsx  manage.py  requirements.txt
Desktop/ac-back/DEV-etc/: ac-back.service  backup_before_update.sh  beat-itcs.service  celery-itcs.service  docker-compose-test.yml  docker-compose.yml  uwsgi.ini
Desktop/ac-back/agent/: filters.py  forModelSerializer.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  utils.py  views.py
Desktop/ac-back/back_office/: admin.py  filters.py  managers.py  models.py  permissions.py  serializers.py  (+4 more)
Desktop/anna/: anna.py
Desktop/itcs-front/: .gitignore  README.md
Desktop/port_back/: .env.example  .gitignore  .gitlab-ci.yml  README.md  manage.py  requirements.txt
Desktop/stuff/: check_true.py  classes.py  ddd.py  dec.py  gen.py  immutable.py  iter.py  lambda.py  test_alg.py
(+1652 files in other folders)
