cmake_minimum_required(VERSION 3.19)
project(study_f)

set(CMAKE_CXX_STANDARD 98)

add_executable(study_f trikutnik.cpp new.cpp dz_3_0_3_6.cpp dz_1.1.9.cpp results_for_x.cpp 4_classwork.cpp 1.19z.cpp 1.1.16a.cpp classwork_mnogoch.cpp 10.cpp 11.cpp 12.cpp 13.cpp 1.2.9a.cpp 1.2.23.cpp 1.2.19z.cpp 1.3a.cpp 1.7bv.cpp 1.8a.cpp 1.2.2.cpp 1.2.1.12b.cpp 1.2.1.11g.cpp 1.2.1.18b.cpp 1.3.1.cpp 1.2.1.17k.cpp 2.0.4.cpp 2.0.5.cpp 2.0.7.cpp)